# naive-bayes-classifier

./: pyproject.toml  simple_naive_bayes_classifier.ipynb
