[tool.poetry]
name = "naive-bayes-classifier"
version = "0.1.0"
description = ""
authors = ["rmidolli <rafaelmidolli@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
numpy = "^2.1.0"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.1"
ipykernel = "^6.29.5"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
